fixes
1) white spaces
2) linebreaks
3) private nodes fix
4) user content fix
5) |truncatechars:100

--- a/forumprj/base/static/style.css
+++ b/forumprj/base/static/style.css
@@ -47,6 +47,9 @@ a {
 }
 
 .text {
+    word-wrap: break-word; 
+    overflow-wrap: break-word; 
+    word-break: break-all; 
     color: var(--text);
     font-size: 14px;
 }
